website skeleton and most of the info is in.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,10 @@
 <footer class="footer">
-  <a class="footer_item" href="/thanks">ack.</a>
-  <a class="footer_item" href="/resume">resume</a>
-  <a class="footer_item" href="/feed.xml">rss</a>
-  <span class="footer_item">&copy; {{ site.time | date: "%Y" }}</span>
+  <a class="footer_item" href="https://github.com/shray/">github</a>
+  <a class="footer_item" href="http://www.linkedin.com/in/shrayb">linkedin</a>
+  <a class="footer_item" href="https://scholar.google.com/citations?user=e-GEqxoAAAAJ&hl=en">google-scholar</a>
   <small class="footer_theme-copyright">
     <!-- Klisé Theme: https://github.com/piharpi/jekyll-klise -->
-    <a
+    Forked from <a
       href="https://github.com/piharpi/jekyll-klise"
       target="_blank"
       rel="noreferrer noopener"
@@ -16,10 +15,12 @@
       >jekyll</a
     >
   </small>
+<span class="footer_item">&copy; Shray Bansal {{ site.time | date: "%Y" }}</span>
 </footer>
-<script src="/assets/js/main.js" defer="defer"></script>
+<!-- <script src="/assets/js/main.js" defer="defer"></script>
 <script src="/assets/js/galite.js"></script>
 <script>
   var galite = galite || {};
   galite.UA = "{{ site.google_analytics }}";
 </script>
+ -->
