--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,8 +5,42 @@ layout: compress
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
 
-{% include header.html %}
+<head>
+  <style>
+    details {
+  display: inline;
+  font: 16px "Open Sans", Calibri, sans-serif;
+  width: 620px;
+}
 
+details > summary {
+  display: inline;
+  padding: 2px 2px;
+  width: 4em;
+  background-color: #ddd;
+  border: none;
+  box-shadow: 3px 3px 4px black;
+  cursor: pointer;
+  list-style: none;
+}
+
+details > summary::-webkit-details-marker {
+  display: inline-block;
+  display: none;
+}
+
+details > p {
+  display: inline;
+  border-radius: 0 0 10px 10px;
+  background-color: #ddd;
+  padding: 2px 6px;
+  margin: 0;
+  box-shadow: 3px 3px 4px black;
+}
+  </style>>
+</head>
+
+{% include header.html %}
 <body>
   {% include navbar.html %}
   <div class="wrapper">
@@ -18,6 +52,7 @@ layout: compress
     </main>
     {% include footer.html %}
   </div>
+  {% include text-expand.html %}
 </body>
 
 </html>
