fixed the title issue on Bayes Nash page and added the link in research, plus, tried some formatting changes in page

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -22,6 +22,7 @@ details > summary {
   box-shadow: 3px 3px 4px black;
   cursor: pointer;
   list-style: none;
+  color: blue;
 }
 
 details > summary::-webkit-details-marker {
@@ -37,7 +38,18 @@ details > p {
   margin: 0;
   box-shadow: 3px 3px 4px black;
 }
-  </style>>
+
+button {
+  display: inline;
+  padding: 2px 2px;
+  width: 4em;
+  background-color: #ddd;
+  border: none;
+  box-shadow: 3px 3px 4px black;
+  cursor: pointer;
+  list-style: none;
+  color: blue;
+}  </style>>
 </head>
 
 {% include header.html %}
